--- a/views/private.hbs
+++ b/views/private.hbs
@@ -1,1 +1,3 @@
-<h1>This page should only be accessible to authenticated users</h1>
+<h1>{{user.name}}</h1>
+<p><em>{{user.status}}</em></p>
+<img width ="200px" height="200px" src="https://images.unsplash.com/photo-1421217336522-861978fdf33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="">
